--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -74,11 +74,70 @@
 
 4. Python如何实现内存管理？有没有可能出现内存泄露的问题?
 
+	（1）Python的内存管理机制：引用计数、垃圾回收、内存池机制
+
+	**一、引用计数**
+
+	引用计数是一种非常高效的内存管理手段， 当一个 Python 对象被引用时其引用计数增加 1， 当其不再被一个变量引用时则计数减 1. 当引用计数等于 0 时对象被删除。使用 `sys.getrefcount()`  可以查看对象的引用计数。
+
+	**二、垃圾回收**
+
+	1.  **引用计数（Reference Counting）**
+
+	引用计数也是一种垃圾收集机制，而且也是一种最直观，最简单的垃圾收集技术。当 Python 中的某个对象的引用计数降为 0 时，说明没有任何引用指向该对象，该对象就成为要被回收的垃圾了。比如某个新建对象，它被分配给某个引用，对象的引用计数变为 1。如果引用被删除，对象的引用计数为 0，那么该对象就可以被垃圾回收。不过如果出现循环引用的话，引用计数机制就不再起有效的作用了。
+
+	2.  **标记-清除（Mark and Sweep）**
+
+	标记-清除算法是用来解决容器对象可能产生的循环引用问题，如果两个对象的引用计数都为 1，但是仅仅存在他们之间的循环引用，那么这两个对象都是需要被回收的，也就是说，它们的引用计数虽然表现为非 0，但实际上有效的引用计数为 0。所以先将循环引用摘掉，就会得出这两个对象的有效计数。
+
+	3. **分代回收（Generational Collection）** 
+
+	在循环引用对象的回收中，整个应用程序会被暂停，为了减少应用程序暂停的时间，Python 通过分代回收机制 以空间换时间的方法提高垃圾回收效率。  Python将所有的对象分为0，1，2三代 ，所有新建对象都是0代，当某一代对象经历过一轮垃圾回收，依然存活，就被归入下一代，代数越高，对象被回收的概率越低。
+
+
+	总体来说，在Python中，主要通过引用计数进行垃圾回收；通过 “标记-清除” 解决容器对象可能产生的循环引用问题；通过 “分代回收” 以空间换时间的方法提高垃圾回收效率。
+
+	**三、内存池**
+
+	Python 在运行期间会大量地执行 malloc 和 free 的操作，频繁地在用户态和核心态之间进行切换，这将严重影响 Python 的执行效率。为了加速 Python 的执行效率，Python 引入了内存池机制，用于管理对小块内存的申请和释放。Python 内部默认的小块内存与大块内存的分界点定在 256 个字节，当申请的内存小于 256 字节时，PyObject_Malloc 会在内存池中申请内存；当申请的内存大于 256 字节时，PyObject_Malloc 的行为将蜕化为 malloc 的行为。当然，通过修改 Python 源代码，我们可以改变这个默认值，从而改变 Python 的默认内存管理行为。
+
+	Python 的内存机制呈现金字塔形状:
+
+	1.最底层为-1，-2 层，主要由操作系统进行操作
+
+	2.第 0 层是 C 中的 malloc，free 等内存分配和释放函数，对大于 256K的大对象进行操作
+
+
+	3.第 1 层和第 2 层是内存池，由 Python 的接口函数 PyMem_Malloc 函数实现，当对象小于 256K 时由该层直接分配内存
+
+	4.第 3 层是最上层，也就是我们对 Python 对象的直接操作
+
+
+	除了解释器层面的自动垃圾回收，Python也为开发者提供了gc模块用于观察和手动管理垃圾回收。
+
+	（2）如果存在循环引用，并且被循环引用的对象定义了\__del__方法，就会发生内存泄露。
+
+	防止内存泄漏的方法：1、使用弱引用 weakref.ref。2、强制将引用设为 None。3、另外当不使用一个对象时，使用 del object 来删除一个对象的引用计数，然后调gc.collect() 手动执行垃圾回收，另外 sys.getrefcount(obj) 可获取对象的引用计数，第三方模块 objgraph 可查看循环引用的对象图，可以用来定位内存泄漏的代码位置。
+
+	> [参考1](https://www.cnblogs.com/51try-again/p/11099999.html)   [参考2](https://andrewpqc.github.io/2018/10/08/python-memory-management/)
 
 
 5. 阐述列表和集合的底层实现原理。
 
+	列表 list ：
 
+	在CPython中，列表被实现为长度可变的数组。
+
+	从细节上看，Python中的列表是由对其它对象的引用组成的连续数组。指向这个数组的指针及其长度被保存在一个列表头结构中。这意味着，每次添加或删除一个元素时，数组的大小需要重新分配。幸运的是，Python在创建这些数组时采用了指数分配，所以并不是每次操作都需要改变数组的大小。
+
+	list和tuple在c实现上是很相似的，对于元素数量大的时候，都是一个数组指针，指针指向相应的对象，此时tuple并不会比list快。但对于小对象来说，tuple会有一个对象池做 资源缓存（resource caching），此时元组的效率高于列表。
+	时间复杂度：append和pop操作的复杂度为O(1),但insert和remove操作的复杂度为O(n)。
+
+	集合 set ：
+
+	CPython使用伪随机探测(pseudo-random probing)的哈希表(hash table)作为字典的底层数据结构，集合和字典非常相似，它被实现为带有空值的字典，只有键才是实际的集合元素。此外，集合还利用这种没有值的映射做了其它的优化。因为哈希表的原因，集合的元素必须为可哈希对象，python中所有不可变对象如int、float、str、tuple都是可哈希的。
+
+	时间复杂度：查找、插入、删除操作的时间复杂度均为 O(1)。
 
 > **cpython** 实现源码：  [listobject.h](https://github.com/python/cpython/blob/master/Include/listobject.h)  [listobject.c](https://github.com/python/cpython/blob/master/Objects/listobject.c )     [setobject.h](https://github.com/python/cpython/blob/master/Include/setobject.h )  [setobject.c](https://github.com/python/cpython/blob/master/Objects/setobject.c)
 
