--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -115,6 +115,8 @@
 
 	除了解释器层面的自动垃圾回收，Python也为开发者提供了gc模块用于观察和手动管理垃圾回收。
 
+
+
 	（2）如果存在循环引用，并且被循环引用的对象定义了\__del__方法，就会发生内存泄露。
 
 	防止内存泄漏的方法：1、使用弱引用 weakref.ref。2、强制将引用设为 None。3、另外当不使用一个对象时，使用 del object 来删除一个对象的引用计数，然后调gc.collect() 手动执行垃圾回收，另外 sys.getrefcount(obj) 可获取对象的引用计数，第三方模块 objgraph 可查看循环引用的对象图，可以用来定位内存泄漏的代码位置。
@@ -822,7 +824,7 @@
 31. HTTP请求的GET和POST有什么区别？
 
     1.url不一样：
-    	GET 请求，请求的数据会附加在 URL 之后，以?问号分割 URL 和传输数据，多个参数用&连接。URL 的编码格式采用的是 ASCII 编码，而不是 unicode，即所有非 ASCII 字符都要编码之后再传输。
+    	GET 请求，请求的数据会附加在 URL 之后，以 `?` 分割 URL 和传输数据，多个参数用 `&` 连接。URL 的编码格式采用的是 ASCII 编码，而不是 unicode，即所有非 ASCII 字符都要编码之后再传输。
     	POST 请求：POST 请求会把请求的数据放置在 HTTP 的请求体中。
     
     因此，GET 请求的数据会暴露在地址栏中，而 POST 请求则不会。
@@ -1015,27 +1017,30 @@
 
 39. 是否使用过Nginx实现负载均衡？用过哪些负载均衡算法？
 
-    **1、轮询  round robin（默认）** 每个请求按时间顺序逐一分配到不同的后端服务器，如果后端服务器down掉，能自动剔除， 适用于后台机器性能一致的情况。
+    **1、轮询  round robin（默认）** 
+    每个请求按时间顺序逐一分配到不同的后端服务器，如果后端服务器down掉，能自动剔除， 适用于后台机器性能一致的情况。
     
-    ```javascript
+    ```Python
     upstream backserver {
     server 192.168.0.14;
     server 192.168.0.15;
     }
     ```
     
-    **2、加权轮询 weight **  根据权重来分发请求到不同的机器中， 指定轮询几率，weight和访问比率成正比，用于后端服务器性能不均的情况。
+    **2、加权轮询 weight **  
+    根据权重来分发请求到不同的机器中， 指定轮询几率，weight和访问比率成正比，用于后端服务器性能不均的情况。
     
-    ```javascript
+    ```Python
     upstream backserver {
     server 192.168.0.14 weight=10;
     server 192.168.0.15 weight=10;
     }
     ```
     
-    **3、IP绑定 ip_hash  ** 每个请求按访问ip的hash值分配，这样每个访客固定访问一个后端服务器，可以解决session会话一致性的问题。 
+    **3、IP绑定 ip_hash  ** 
+    每个请求按访问ip的hash值分配，这样每个访客固定访问一个后端服务器，可以解决session会话一致性的问题。 
     
-    ```javascript
+    ```Python
     upstream backserver {
     ip_hash;
     server 192.168.0.14:88;
@@ -1043,9 +1048,10 @@
     }
     ```
     
-    **4、fair（第三方）** 按后端服务器的响应时间来分配请求，响应时间短的优先分配。
+    **4、fair（第三方）** 
+    按后端服务器的响应时间来分配请求，响应时间短的优先分配。
     
-    ```javascript
+    ```Python
     upstream backserver {
     server server1;
     server server2;
@@ -1053,9 +1059,10 @@
     }
     ```
     
-    **5、url_hash（第三方）** 按访问url的hash结果来分配请求，使每个url定向到同一个后端服务器，后端服务器为缓存时比较有效。
+    **5、url_hash（第三方）** 
+    按访问url的hash结果来分配请求，使每个url定向到同一个后端服务器，后端服务器为缓存时比较有效。
     
-    ```javascript
+    ```Python
     upstream backserver {
     server squid1:3128;
     server squid2:3128;
@@ -1069,10 +1076,10 @@
 
 40. 一个保存整数（int）的数组，除了一个元素出现过1次外，其他元素都出现过两次，请找出这个元素。
 
-    **利用按位异或运算的特性：**
-    **1.一个整数与 0 进行异或运算后值不变，a ^ 0 == a**
-    **2.一个整数与 自身 进行异或运算后等于0，a ^ a == 0**
-    **3.异或运算满足交换律和结合律，a ^ b ^ a == (a ^ a) ^ b == 0 ^ b == b**
+    利用按位异或运算的特性：
+    1.一个整数与 0 进行异或运算后值不变，a ^ 0 == a
+    2.一个整数与 自身 进行异或运算后等于0，a ^ a == 0
+    3.异或运算满足交换律和结合律，a ^ b ^ a == (a ^ a) ^ b == 0 ^ b == b
     
     ```Python
     def find_single(nums):
