--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -1017,7 +1017,8 @@
 
 39. 是否使用过Nginx实现负载均衡？用过哪些负载均衡算法？
 
-    **1、轮询  round robin（默认）** 
+    1、轮询  round robin（默认）
+    
     每个请求按时间顺序逐一分配到不同的后端服务器，如果后端服务器down掉，能自动剔除， 适用于后台机器性能一致的情况。
     
     ```Python
@@ -1027,7 +1028,8 @@
     }
     ```
     
-    **2、加权轮询 weight **  
+    2、加权轮询 weight
+    
     根据权重来分发请求到不同的机器中， 指定轮询几率，weight和访问比率成正比，用于后端服务器性能不均的情况。
     
     ```Python
@@ -1037,7 +1039,8 @@
     }
     ```
     
-    **3、IP绑定 ip_hash  ** 
+    3、IP绑定 ip_hash 
+    
     每个请求按访问ip的hash值分配，这样每个访客固定访问一个后端服务器，可以解决session会话一致性的问题。 
     
     ```Python
@@ -1048,7 +1051,8 @@
     }
     ```
     
-    **4、fair（第三方）** 
+    4、fair（第三方）
+    
     按后端服务器的响应时间来分配请求，响应时间短的优先分配。
     
     ```Python
@@ -1059,7 +1063,8 @@
     }
     ```
     
-    **5、url_hash（第三方）** 
+    5、url_hash（第三方）
+    
     按访问url的hash结果来分配请求，使每个url定向到同一个后端服务器，后端服务器为缓存时比较有效。
     
     ```Python
@@ -1070,7 +1075,6 @@
     hash_method crc32;
     }
     ```
-
 
 
 
