--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -16,7 +16,7 @@
     
     区别3：特性支持不同
     
-    新式类支持 Python 新增的更灵活的特性，例如 __slots__类属性、__getattribute__()方法、类方法和静态方法、描述符、特征属性等。
+    新式类支持 Python 新增的更灵活的特性，例如 __slots__类属性、__getattribute__方法、类方法和静态方法、描述符、特征属性等。
     
     区别4：继承顺序不同
     
@@ -508,27 +508,25 @@
 		class Person:
 			pass
 
-			a = Person()
-			b = Person()
-			print(a, b, a is b)
-
+		a = Person()
+		b = Person()
+		print(a, b, a is b)
 
 
 		class Person(Singleton):
 			pass
 
-			c = Person()
-			d = Person()
-			print(c, d, c is d)
-
+		c = Person()
+		d = Person()
+		print(c, d, c is d)
 
 
 		class Person(metaclass=SingletonMeta):
 			pass
 
-			e = Person()
-			f = Person()
-			print(e, f, e is f)
+		e = Person()
+		f = Person()
+		print(e, f, e is f)
     
     ```
     > 更多示例：[stack overflow](https://stackoverflow.com/questions/6760685/creating-a-singleton-in-python)   [官网装饰器样例实现](https://wiki.python.org/moin/PythonDecoratorLibrary#Singleton)
@@ -571,17 +569,17 @@
     from functools import wraps
 
 	def time_it(fn):
-		"""函数调用执行用时装饰器"""
+	"""函数调用执行用时装饰器"""
 
-			@wraps(fn)
-			def wrapper(*args, **kwargs):
-				start = time.time()
-				result = fn(*args, **kwargs)
-				end = time.time()
-				print(f'函数{fn.__name__}被调用，共计用时{end - start:.2f}秒。')
-				return result
+		@wraps(fn)
+		def wrapper(*args, **kwargs):
+			start = time.time()
+			result = fn(*args, **kwargs)
+			end = time.time()
+			print(f'函数{fn.__name__}被调用，共计用时{end - start:.2f}秒。')
+			return result
 
-			return wrapper
+		return wrapper
     ```
 
 
@@ -823,37 +821,42 @@
 
 31. HTTP请求的GET和POST有什么区别？
 
-    1.url不一样：
-    	GET 请求，请求的数据会附加在 URL 之后，以 `?` 分割 URL 和传输数据，多个参数用 `&` 连接。URL 的编码格式采用的是 ASCII 编码，而不是 unicode，即所有非 ASCII 字符都要编码之后再传输。
-    	POST 请求：POST 请求会把请求的数据放置在 HTTP 的请求体中。
-    
-    因此，GET 请求的数据会暴露在地址栏中，而 POST 请求则不会。
-    
-    2.传输数据的大小：
-    	在 HTTP 规范中，没有对 URL 的长度和传输的数据大小进行限制。但是在实际开发过程中，对于 GET，特定的浏览器和服务器对 URL 的长度有限制。因此，在使用 GET 请求时，传输数据会受到 URL 长度的限制。
-    	对于 POST，由于不是 URL 传值，理论上是不会受限制的，但是实际上各个服务器会规定对 POST
-    提交数据大小进行限制，Apache、IIS 都有各自的配置。
-    
-    3.安全性：
-    	POST 的安全性比 GET 的高。这里的安全是指真正的安全，而不同于上面 GET 提到的安全方法中的安全，上面提到的安全仅仅是不修改服务器的数据。比如，在进行登录操作，通过 GET 请求，用户名和密码都会暴露再 URL 上，因为登录页面有可能被浏览器缓存以及其他人查看浏览器的历史记录的原因，此时的用户名和密码就很容易被他人拿到了。除此之外，GET 请求提交的数据还可能会造成 Cross-site request frogery 攻击。
-    
-    4.效率：
-    	GET 比 POST 效率高。
-    	POST 请求的过程：
-     1.浏览器请求 tcp 连接（第一次握手）
-     2.服务器答应进行 tcp 连接（第二次握手）
-     3.浏览器确认，并发送 post 请求头（第三次握手，这个报文比较小，所以 http 会在此时进行
-    第一次数据发送）
-     4.服务器返回 100 continue 响应
-     5.浏览器开始发送数据
-     6.服务器返回 200 ok 响应
-    GET 请求的过程：
-     1.浏览器请求 tcp 连接（第一次握手）
-     2.服务器答应进行 tcp 连接（第二次握手）
-     3.浏览器确认，并发送 get 请求头和数据（第三次握手，这个报文比较小，所以 http 会在此时
-    进行第一次数据发送）
-     4.服务器返回 200 OK 响应
+	1.请求数据存放位置不一样
+	
+	GET 请求，请求的数据会附加在 URL 之后，以 `?` 分割 URL 和传输数据，多个参数用 `&` 连接。URL 的编码格式采用的是 ASCII 编码，而不是 unicode，即所有非 ASCII 字符都要编码之后再传输。
+	POST 请求：POST 请求会把请求的数据放置在 HTTP 的请求体中。
 
+	因此，GET 请求的数据会暴露在地址栏中，而 POST 请求则不会。
+
+	2.传输数据的大小不一样
+	
+	在 HTTP 规范中，没有对 URL 的长度和传输的数据大小进行限制。但是在实际开发过程中，对于 GET，特定的浏览器和服务器对 URL 的长度有限制。因此，在使用 GET 请求时，传输数据会受到 URL 长度的限制。
+	对于 POST，由于不是 URL 传值，理论上是不会受限制的，但是实际上各个服务器会规定对 POST
+	提交数据大小进行限制，Apache、IIS 都有各自的配置。
+
+	3.POST 的安全性比 GET 的高
+	
+	这里的安全是指真正的安全，而不同于上面 GET 提到的安全方法中的安全，上面提到的安全仅仅是不修改服务器的数据。比如，在进行登录操作，通过 GET 请求，用户名和密码都会暴露在 URL 上，因为登录页面有可能被浏览器缓存以及其他人查看浏览器的历史记录的原因，此时的用户名和密码就很容易被他人拿到了。除此之外，GET 请求提交的数据还可能会造成 CSRF 跨站请求攻击。
+
+	4.GET 的效率比 POST 高
+
+	POST 请求的过程：
+	1.浏览器请求 tcp 连接（第一次握手）
+	2.服务器答应进行 tcp 连接（第二次握手）
+	3.浏览器确认，并发送 post 请求头（第三次握手，这个报文比较小，所以 http 会在此时进行
+	第一次数据发送）
+	4.服务器返回 100 continue 响应
+	5.浏览器开始发送数据
+	6.服务器返回 200 ok 响应
+	
+	GET 请求的过程：
+	1.浏览器请求 tcp 连接（第一次握手）
+	2.服务器答应进行 tcp 连接（第二次握手）
+	3.浏览器确认，并发送 get 请求头和数据（第三次握手，这个报文比较小，所以 http 会在此时
+	进行第一次数据发送）
+	4.服务器返回 200 OK 响应
+
+	> (参考链接)[https://www.zhihu.com/question/28586791]
 
 
 32. 说一些你知道的HTTP响应状态码。
