--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -315,11 +315,8 @@
 
 
 	```Python
+	from collections import Counter
 	lst = ['a', 'a', 'b', 5, 'a', 'a', 5]
-
-		from collections import Counter
-
-
 
 	# 1.collections.Counter内置类型
 	def half_ele_counter(lst):
@@ -369,12 +366,14 @@
 					return mid
 			return None
 
+
 	def binary_search_std_lib(array, item):
 		"""标准库调用"""
 		index = bisect.bisect_left(array, item)
 		if index != len(array) and array[index] == item:
 			return index
 		return None
+
 
 	def binary_search_by_recursion(array, item, left, right):
 		"""递归实现，首次递归需指定 left=0, right=(len(sorted_collection)-1)"""
@@ -389,6 +388,7 @@
 				return binary_search_by_recursion(array, item, left, mid - 1)
 			else:
 				return binary_search_by_recursion(array, item, mid + 1, right)
+
 
 	if __name__ == '__main__':
 		print(binary_search([0, 5, 7, 10, 15], 5))
@@ -500,7 +500,6 @@
 						if cls not in cls._instances:
 							cls._instances[cls] = super(SingletonMeta, cls).__call__(*args, **kwargs)
 				return cls._instances[cls]
-
 
 
 	if __name__ == '__main__':
@@ -856,8 +855,7 @@
 	进行第一次数据发送）
 	4.服务器返回 200 OK 响应
 
-	> (参考链接)[https://www.zhihu.com/question/28586791]
-
+	> [参考链接](https://www.zhihu.com/question/28586791)
 
 32. 说一些你知道的HTTP响应状态码。
 
@@ -907,16 +905,18 @@
     ```Python
     1. 当用户在浏览器中输入url时,浏览器会生成请求头和请求体发给服务端。
     
-    2. 请求先经过Django中的wsgi模块，首先被转化成一个 HttpRequest 对象，再经过Django的 Request 请求中间件，请求中间件处理完毕，根据url进行路由映射表匹配，url一旦匹配成功，将请求对象传递给 View 视图中间件，视图中间件处理完毕，进入下一步 view 视图函数处理。
+    2. 请求先经过Django中的wsgi模块，首先被转化成一个 HttpRequest 对象，再经过Django的 Request 请求中间件，
+    请求中间件处理完毕，根据url进行路由映射表匹配，url一旦匹配成功，将请求对象传递给 View 视图中间件，
+    视图中间件处理完毕，进入下一步 view 视图函数处理。
     
-    3. 执行视图函数，业务处理（通过ORM的 Model 模块类进行数据库读写操作），返回 HTTPResponse 对象给Django，再通过一系列的 Response 响应中间件，然后Django把客户端想要的数据作为一个字符串返回给客户端。
+    3. 执行视图函数，业务处理（通过ORM的 Model 模块类进行数据库读写操作），返回 HTTPResponse 对象给Django，
+    再通过一系列的 Response 响应中间件，然后Django把客户端想要的数据作为一个字符串返回给客户端。
     
     4. 客户端浏览器接收到返回的数据,经过渲染后显示给用户。
     
     ```
     
      ![img](https://upload-images.jianshu.io/upload_images/12899159-a885a8680c58321e.png?imageMogr2/auto-orient/strip|imageView2/2/w/446/format/webp) 
-
 
 
 
@@ -989,7 +989,6 @@
 
 
 
-
 37. 请说明Cookie和Session之间的关系。
 
     ```Python
@@ -1004,13 +1003,14 @@
 
 
 
-
 38. 说一下索引的原理和作用。
 
     ```Python
     数据库索引，是数据库中一种事先对数据库表中一列或多列数据进行排序的存储结构，可以协助数据库更加快速地查询、更新数据库表中数据。
     
-    原理：未经排序的数据库字段数据需要逐一进行线性查找，时间复杂度为O(N），排序之后可以对其使用二分法查找，时间复杂度降为ln(N)。各大数据库索引的实现通常使用 B树。B树 索引加速了数据访问，因为存储引擎不会再去扫描整张表得到需要的数据，相反，它从根节点开始，根节点保存了子节点的指针，存储引擎会根据指针快速寻找数据。
+    原理：未经排序的数据库字段数据需要逐一进行线性查找，时间复杂度为O(N），排序之后可以对其使用二分法查找，
+    时间复杂度降为ln(N)。各大数据库索引的实现通常使用 B树。B树 索引加速了数据访问，因为存储引擎不会再去扫描整张表得到需要的数据，
+    相反，它从根节点开始，根节点保存了子节点的指针，存储引擎会根据指针快速寻找数据。
     
     作用：加快查询速度，同时也需要占用额外的磁盘空间。
     ```
