--- a/Day41-55/42.深入模型.md
+++ b/Day41-55/42.深入模型.md
@@ -29,10 +29,10 @@
        'default': {
            'ENGINE': 'django.db.backends.mysql',
            'NAME': 'oa',
-           'HOST': '1.2.3.4',
+           'HOST': '127.0.0.1',
            'PORT': 3306,
-           'USER': 'yourname',
-           'PASSWORD': 'yourpass',
+           'USER': 'root',
+           'PASSWORD': '123456',
        }
    }
    
