--- a/Day01-15/02.语言元素.md
+++ b/Day01-15/02.语言元素.md
@@ -172,8 +172,8 @@ print('flag2 =', flag2) # flag2 = False
 print('flag3 =', flag3) # flag3 = False
 print('flag4 =', flag4) # flag4 = True
 print('flag5 =', flag5) # flag5 = False
-print(flag1 is True) # True
-print(flag2 is not False) # False
+print('flag1 is True.', flag1 is True) # True
+print('flag2 is not False.', flag2 is not False) # False
 ```
 
 ### 练习
