修复冒泡排序Bug print( bubble_sort([2, 1, 0]) ) # 原代码返回 [1, 0, 2]

--- a/Day16-20/16-20.Python语言进阶.md
+++ b/Day16-20/16-20.Python语言进阶.md
@@ -147,7 +147,7 @@
       items = items[:]
       for i in range(len(items) - 1):
           swapped = False
-          for j in range(i, len(items) - 1 - i):
+          for j in range(0, len(items) - 1 - i):
               if comp(items[j], items[j + 1]):
                   items[j], items[j + 1] = items[j + 1], items[j]
                   swapped = True
