--- a/Day01-15/07.字符串和常用数据结构.md
+++ b/Day01-15/07.字符串和常用数据结构.md
@@ -456,6 +456,7 @@ def generate_code(code_len=4):
 
     :return: 由大小写英文字母和数字构成的随机验证码
     """
+    code = ''
     all_chars = '0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'
     last_pos = len(all_chars) - 1
     code = ''
