--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -25,7 +25,7 @@
    答：
 
    ```Python
-   
+   d1 = {x[0]:x[1] for x in sorted(d.items(),key=lambda x:x[1])}
    ```
 
 7. 实现将字符串`k1:v1|k2:v2|k3:v3`处理成字典`{'k1': 'v1', 'k2': 'v2', 'k3': 'v3'}`。
