--- a/Day01-15/03.分支结构.md
+++ b/Day01-15/03.分支结构.md
@@ -142,12 +142,13 @@ a = float(input('a = '))
 b = float(input('b = '))
 c = float(input('c = '))
 if a + b > c and a + c > b and b + c > a:
-    print('周长: %f' % (a + b + c))
+    print(f'周长: {a + b + c}')
     p = (a + b + c) / 2
     area = (p * (p - a) * (p - b) * (p - c)) ** 0.5
-    print('面积: %f' % (area))
+    print(f'面积: {area}')
 else:
     print('不能构成三角形')
+
 ```
 > **说明：** 上面使用的通过边长计算三角形面积的公式叫做[海伦公式](https://zh.wikipedia.org/zh-hans/海伦公式)。
 
