格式化代码

--- a/Day01-15/04.循环结构.md
+++ b/Day01-15/04.循环结构.md
@@ -18,10 +18,7 @@ Version: 0.1
 Author: 骆昊
 """
 
-sum = 0
-for x in range(101):
-    sum += x
-print(sum)
+print(sum(i for i in range(1, 101)))
 ```
 
 需要说明的是上面代码中的`range(1, 101)`可以用来构造一个从1到100的范围，当我们把这样一个范围放到`for-in`循环中，就可以通过前面的循环变量`x`依次取出从1到100的整数。当然，`range`的用法非常灵活，下面给出了一个例子：
@@ -41,10 +38,7 @@ Version: 0.1
 Author: 骆昊
 """
 
-sum = 0
-for x in range(2, 101, 2):
-    sum += x
-print(sum)
+print(sum(i for i in range(2, 101, 2)))
 ```
 
 当然，也可以通过在循环中使用分支结构的方式来实现相同的功能，代码如下所示。
@@ -57,11 +51,7 @@ Version: 0.1
 Author: 骆昊
 """
 
-sum = 0
-for x in range(1, 101):
-    if x % 2 == 0:
-        sum += x
-print(sum)
+print(sum(i for i in range(1, 101) if i % 2 == 0))
 ```
 
 > **说明**：相较于上面直接跳过奇数的做法，下面这种做法很明显并不是很好的选择。
@@ -93,7 +83,7 @@ while True:
     else:
         print('恭喜你猜对了!')
         break
-print('你总共猜了%d次' % counter)
+print(f'你总共猜了{counter}次')
 if counter > 7:
     print('你的智商余额明显不足')
 ```
@@ -112,7 +102,7 @@ Author: 骆昊
 
 for i in range(1, 10):
     for j in range(1, i + 1):
-        print('%d*%d=%d' % (i, j, i * j), end='\t')
+        print(f'{i}*{j}={i * j}', end='\t')
     print()
 ```
 
