--- a/Day41-55/42.深入模型.md
+++ b/Day41-55/42.深入模型.md
@@ -4,7 +4,7 @@
 
 ### 创建项目和应用
 
-我们首先创建Django项目`vote`并为其添加虚拟环境和依赖项。接下来，在项目下创建名为`polls`的应用和保存模板页的文件夹`tempaltes`，项目文件夹的结构如下所示。
+我们首先创建Django项目`vote`并为其添加虚拟环境和依赖项。接下来，在项目下创建名为`polls`的应用和保存模板页的文件夹`templates`，项目文件夹的结构如下所示。
 
 ![](res/pycharm-vote-project.png)
 
