--- a/Day41-55/42.深入模型.md
+++ b/Day41-55/42.深入模型.md
@@ -377,6 +377,8 @@ Teacher.objects.filter(subject__name__contains='全栈')
     
     def show_teachers(request):
         try:
+            # 测试的时候要传参数‘sno’，如‘http://localhost:8000/teachers/?sno=1’
+        try:
             sno = int(request.GET.get('sno'))
             teachers = []
             if sno:
