修正链接跳转错误

--- a/Day01-15/01.初识Python.md
+++ b/Day01-15/01.初识Python.md
@@ -218,7 +218,7 @@ pip3 install ipython
 
 #### PyCharm - Python开发神器
 
-PyCharm的安装、配置和使用在[《玩转PyCharm》](../玩转PyCharm.md)进行了介绍，有兴趣的读者可以选择阅读。
+PyCharm的安装、配置和使用在[《玩转PyCharm》](../番外篇/玩转PyCharm.md)进行了介绍，有兴趣的读者可以选择阅读。
 
 ![](./res/python-pycharm.png)
 
