--- a/Day66-80/70.Pandas的应用-1.md
+++ b/Day66-80/70.Pandas的应用-1.md
@@ -62,7 +62,7 @@ dtype: int64
 代码：
 
 ```Python
-print(ser2[0], ser[1], ser[2], ser[3])
+print(ser2[0], ser2[1], ser2[2], ser2[3])
 ser2[0], ser2[3] = 350, 360
 print(ser2)
 ```
