--- a/Day01-15/08.面向对象编程基础.md
+++ b/Day01-15/08.面向对象编程基础.md
@@ -161,6 +161,8 @@ class Clock(object):
                 self._hour += 1
                 if self._hour == 24:
                     self._hour = 0
+                    self._minute = 0
+                    self._second = 0
 
     def show(self):
         """显示时间"""
