Fix some typos.

--- a/Day41-55/46.日志和调试工具栏.md
+++ b/Day41-55/46.日志和调试工具栏.md
@@ -105,7 +105,7 @@ LOGGING = {
 最后配置的**日志记录器**是用来真正输出日志的，Django框架提供了如下所示的内置记录器：
 
 1. `django` - 在Django层次结构中的所有消息记录器
-2. `django.request` - 与请求处理相关的日志消息。5xx响应被视为错误消息；4xx响应被视为为警告消息
+2. `django.request` - 与请求处理相关的日志消息。5xx响应被视为错误消息；4xx响应被视为警告消息
 3. `django.server` - 与通过runserver调用的服务器所接收的请求相关的日志消息。5xx响应被视为错误消息；4xx响应被记录为警告消息；其他一切都被记录为INFO
 4. `django.template` - 与模板渲染相关的日志消息
 5. `django.db.backends` - 有与数据库交互产生的日志消息，如果希望显示ORM框架执行的SQL语句，就可以使用该日志记录器。
