修改变量未定义

--- a/Day01-15/14.网络编程入门和网络应用开发.md
+++ b/Day01-15/14.网络编程入门和网络应用开发.md
@@ -226,7 +226,7 @@ def main():
             my_dict['filename'] = 'guido.jpg'
             # JSON是纯文本不能携带二进制数据
             # 所以图片的二进制数据要处理成base64编码
-            my_dict['filedata'] = data
+            my_dict['filedata'] = 'data'
             # 通过dumps函数将字典处理成JSON字符串
             json_str = dumps(my_dict)
             # 发送JSON字符串
