--- a/Day16-20/16-20.Python语言进阶.md
+++ b/Day16-20/16-20.Python语言进阶.md
@@ -625,6 +625,8 @@
   
   class Manager(Employee):
       """部门经理"""
+      def __init__(self, name):
+          self.name = name
   
       def get_salary(self):
           return 15000.0
