更新了机器学习部分文档

--- a/Day81-90/82.k最近邻算法.md
+++ b/Day81-90/82.k最近邻算法.md
@@ -1,4 +1,4 @@
-## 说走就走的AI之旅第02课：k最近邻算法
+## k最近邻算法
 
 k 最近邻算法（kNN）是一种用于分类和回归的非参数统计方法，由美国统计学家伊芙琳·费克斯和小约瑟夫·霍奇斯于 1951 年提出。kNN 算法的原理是从历史数据中找到$\small{k}$个跟新的输入实例最邻近的实例，根据它们中的多数所属的类别来对新实例进行分类或者输出新实例的属性值，这种算法我们在前面已经为大家做了简单的展示。与主流的机器学习算法不同，k 最近邻算法没有显式的学习训练过程，它用的是“近朱者赤，近墨者黑”这样一种简单朴素的思想来实现分类或回归。k 最近邻算法有两个关键问题，第一个是$\small{k}$值如何选择，即用多少个最近邻来判定新实例所属的类别；第二个是如何判定两个实例是近还是远，这里就涉及到度量距离的问题。
 
